# EmbeddingCollapseStudy

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml
configs/: base.yaml  sweep_batchsize.yaml  sweep_temperature.yaml
notebooks/: analysis.ipynb
paper/: main.tex  references.bib
src/embedding_collapse_study/: metrics.py  probe.py  train.py  visualize.py
